avances pagina de inicio

--- a/index.html
+++ b/index.html
@@ -10,24 +10,29 @@
 
 <body>
 	<header>
-	 <nav class="botonera1">
+		
+	<div><img src="img/logo a inicio.png" alt="logo a inicio"/></div>
+		
+	 <nav class="botoneraheader">
 		<ul>
-			<li>Restaurantes</li>
-			<li>Recetas</li>
-			<li>Foro</li>
-			<li>Mi perfil</li>
+			<li><a href="#">Restaurantes</a></li>
+			<li><a href="#">Recetas</a></li>
+			<li><a href="#">Foro</a></li>
+			<li><a href="#">Mi perfil</a></li>
 		 </ul>
 		</nav>
+		
 	</header>
 	
 	<main>
 		<article class="columnaizq">
-		logo
+			
+		<div><img src="img/logo circulo blanco.png" alt="logo circulo blanco" width="420" height="420"/></div>
 		</article>
 		
 		<article class="columnader">
-	<h1>¿Qué podés encontrar?</h1>
-		<p>Variedad de recetas y restaurantes aptos para celíacos, con la posibilidad de ajustar la búsqueda a tus gustos! Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias. </p>
+		<h1>¿Qué podés encontrar?</h1>
+		<p>Variedad de recetas y restaurantes aptos para <br> celíacos, con la posibilidad de ajustar la búsqueda a <br> tus gustos! Además, vas a poder comunicarte con <br> otras personas, compartir consejos y experiencias. </p>
 	
 	<nav class="registro">
 		<ul>
@@ -36,7 +41,7 @@
 		 </ul>
 		</nav>
 	
-		<h2>¿Sabes lo que es la contaminación cruzada?</h2>
+		<h2>¿Sabes lo que es <br> la contaminación cruzada?</h2>
 		<p>La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente.</p>
 	</article>
 	</main>
