--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
 		<p>Variedad de recetas y restaurantes aptos para celíacos, con la posibilidad de ajustar la búsqueda a tus gustos! Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias. </p>
 	
 	<nav class="registro">
-		<ul>
+		<ul class="botonizq">
 			<li>Iniciar sesion</li>
+		</ul>
+		<ul class="botonderech">
 			<li>Registrarse</li>
 		 </ul>
-		</nav>
+	</nav>
 	
 		<h2>¿Sabes lo que es la contaminación cruzada?</h2>
 		<p>La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente.</p>
