--- a/index.html
+++ b/index.html
@@ -11,47 +11,49 @@
 <body>
 	<header>
 		
-	<div><img src="img/logo a inicio.png" alt="logo a inicio"/></div>
+		<div>
+			<img src="img/logo a inicio.png" alt="logo a inicio"/>
+		</div>
 		
-	 <nav class="botoneraheader">
-		<ul>
-			<li><a href="#">Restaurantes</a></li>
-			<li><a href="#">Recetas</a></li>
-			<li><a href="#">Foro</a></li>
-			<li><a href="#">Mi perfil</a></li>
-		 </ul>
+		 <nav class="botoneraheader">
+			<ul>
+				<li><a href="#">Restaurantes</a></li>
+				<li><a href="#">Recetas</a></li>
+				<li><a href="#">Foro</a></li>
+				<li><a href="#">Mi perfil</a></li>
+			 </ul>
 		</nav>
 		
 	</header>
 	
 	<main>
-		<article class="columnaizq">
-			
-		<div><img src="img/logo circulo blanco.png" alt="logo circulo blanco" width="420" height="420"/></div>
+		<article class="columnaizq">	
+			<div>
+				<img src="img/logo circulo blanco.png" alt="logo circulo blanco" width="320" height="320"/>
+			</div>
 		</article>
 		
 		<article class="columnader">
-		<h1>¿Qué podés encontrar?</h1>
-		<p>Variedad de recetas y restaurantes aptos para  celíacos, con la posibilidad de ajustar la búsqueda a  tus gustos. Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias. </p>
+			<h1>¿Qué podés encontrar?</h1>
+			<p>Variedad de recetas y restaurantes aptos para  celíacos, con la posibilidad de ajustar la búsqueda a  tus gustos. Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias. </p>
+			<nav class="registro">
+				<ul class="botonizq">
+					<li>Iniciar sesion</li>
+				</ul>
+				<ul class="botonderech">
+					<li>Registrarse</li>
+		 		</ul>
+			</nav>
 	
-	<nav class="registro">
-		<ul class="botonizq">
-			<li>Iniciar sesion</li>
-		</ul>
-		<ul class="botonderech">
-			<li>Registrarse</li>
-		 </ul>
-	</nav>
-	
-		<h2>¿Sabes lo que es <br> la contaminación cruzada?</h2>
+		<h2>¿Sabes lo que es  la contaminación cruzada?</h2>
 		<p>La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente.</p>
+			<div class="imginicio">
+		    	<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="imgresto"/>
+				<h3>Restaurantes</h3>
+				<img src="img/recetas saladas/ñoquis.png" width="320" height="320" alt="imgreceta"/>
+				<h3>Recetas</h3>
+			</div>
 	</article>
-		<div>
-			<article class="imginicio">
-	    		<img src="img/restaurantes/osanegra.png" width="120" height="120" alt="restauranteinicio"/>
-	    		<img src="img/recetas saladas/ñoquis.png" width="120" height="120" alt="recetasinicio"/> 
-			</article>
-		</div>
 		
 	</main>
 	
@@ -65,7 +67,30 @@
 	
 	
 	<footer>
-	<p> © Tacc Free 2022 | Todos los derechos reservados</p>
+		<div>
+			<img src="img/logo a inicio.png" width="81" height="43" alt=""/>
+			<p> © Tacc Free 2022 | Todos los derechos reservados</p>
+		</div>
+		<article>
+			<h4>SEGUINOS EN </h4>
+			<div class="imgredes">
+	    		<img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/>
+	    		<img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/>
+	    		<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
+			</div>
+		</article>
+		<article class="infonuestra">
+			<h4>SOBRE NOSOTROS</h4>
+			<p>Preguntas frecuentes</p>
+			<p>Contacto</p>
+		</article>
+		<article class="infolegal">
+			<h4>INFORMACIÓN</h4>
+			<p>Aviso legal</p>
+			<p>Política de privacidad</p>
+			<p>Política de cookies</p>
+		</article>
+		
 	
 	</footer>
 	
