ediciones y creacion de archivos

--- a/gracias por unirte.html
+++ b/gracias por unirte.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>TACC FREE</title>
-	<link href="estilos.css" rel="stylesheet" type="text/css">
+	<link href="estilos-gracias-por-unirte.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Inika&family=Open+Sans&family=Original+Surfer&display=swap" rel="stylesheet">
 </head>
@@ -34,16 +34,9 @@
 		</article>
 		
 		<article class="columnader">
-			<h1>¿Qué podés encontrar?</h1>
-			<p>Variedad de recetas y restaurantes aptos para  celíacos, con la posibilidad de ajustar la búsqueda a  tus gustos. Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias. </p>
-			<nav class="registro">
-				<ul class="botonizq">
-					<li><a href="iniciar-sesion.html">Iniciar sesion</a></li>
-				</ul>
-				<ul class="botonderech">
-					<li><a href="registrarse.html">Registrarse</a></li>
-		 		</ul>
-			</nav>
+			<h1>¡Gracias por unirte!</h1>
+			<p>Con nosotros vas a poder conocer variedad de recetas y restaurantes aptos para celiacos, con la posibilidad de ajustar la búsqueda a tus gustos! Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias. </p>
+
 	
 		<h2>¿Sabes lo que es la contaminación cruzada?</h2>
 			<p>La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente.</p>
@@ -58,14 +51,10 @@
 			
 	</article>
 		
+		
+		
+		
 	</main>
-	
-	
-	
-	
-	
-	
-	
 	
 	
 	
@@ -98,8 +87,9 @@
 	</footer>
 	
 	
+
+
+	
+	
 </body>
-	
-	
-	
 </html>
