--- a/iniciar-sesion.html
+++ b/iniciar-sesion.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Formulario inicio</title>
+	<title>Iniciar sesion | TACC FREE</title>
+	<link href="estilos-iniciar-sesion.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Original+Surfer&display=swap" rel="stylesheet">
 </head>
 
@@ -11,6 +12,7 @@
 		<section class="logo">
     		<img src="img/logo circulo blanco.png" width="420" height="420" alt="logo"/> 
 		</section>
+		
 		<section class="Formulario-inicio">
 			<h1>Email</h1>
 			<input class="Controles" type="email" name="nombres" id="email" placeholder="Ingrese su Email">
@@ -19,7 +21,7 @@
 			<input class="Controles" type="password" name="nombres" id="contraseña" placeholder="Ingrese su Contraseña">
 			<hr>
 			<p>Olvidé mi contraseña</p>
-			<input class="Boton" type="submit" value="Iniciar sesión">
+			<a href="gracias por unirte.html"><input class="Boton" type="submit" value="Iniciar sesión"></a>
 		</section>
 	</main>
 </body>
