--- a/registrarse.html
+++ b/registrarse.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Formulario registro</title>
+	<title>Resgitrarse | TACC FREE</title>
 	<link href="estilos-formularios.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Original+Surfer&display=swap" rel="stylesheet">
 </head>
@@ -12,6 +12,7 @@
 		<section class="logo">
     		<img src="img/logo circulo blanco.png" width="420" height="420" alt="logo"/> 
 		</section>
+		
 		<section class="Formulario-registro">
 			<h1>Nombre</h1>
 			<input class="Controles" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre">
@@ -26,8 +27,10 @@
 			<input class="Controles" type="password" name="nombres" id="contraseña" placeholder="Ingrese su Contraseña">
 			<hr>
 			<p>Al menos 8 caracteres</p>
-	  		<input class="Boton" type="submit" value="Registrarse">
+	  		<a href="gracias por unirte.html"><input class="Boton" type="submit" value="Registrarse"></a>
+			
 		</section>
+		
 	</main>
 </body>
 </html>
