--- a/index.html
+++ b/index.html
@@ -21,58 +21,55 @@
 				<li><a href="recetas.html">Recetas</a></li>
 				<li><a href="foro.html">Foro</a></li>
 				<li><a href="#">Mi perfil</a></li>
-			 </ul>
+			</ul>
 		</nav>
 		
 	</header>
 	
 	<main>
-		<article class="columnaizq">	
+		<article class="columnaizq">
 			<div>
-				<img src="img/logo circulo blanco.png" alt="logo circulo blanco" width="350" height="350"/>
+				<img class="logo" src="img/logo circulo blanco.png" alt="logo circulo blanco" width="350" height="350"/>
 			</div>
 		</article>
 		
 		<article class="columnader">
 			<h1>¿Qué podés encontrar?</h1>
-			<p>Variedad de recetas y restaurantes aptos para  celíacos, con la posibilidad de ajustar la búsqueda a  tus gustos. Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias. </p>
+			
+			<p>
+				Variedad de recetas y restaurantes aptos para celíacos, con la posibilidad de ajustar la búsqueda a  tus gustos. Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias.
+			</p>
+			
 			<nav class="registro">
 				<ul class="botonizq">
 					<li><a href="iniciar-sesion.html">Iniciar sesion</a></li>
 				</ul>
 				<ul class="botonderech">
 					<li><a href="registrarse.html">Registrarse</a></li>
-		 		</ul>
+				</ul>
 			</nav>
 	
-		<h2>¿Sabes lo que es la contaminación cruzada?</h2>
-			<p>La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente.</p>
-		
-			<div class="imginicio">
-		    	<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="imgresto"/>
-				<h3>Restaurantes</h3>
-				<img src="img/recetas saladas/ñoquis.png" width="320" height="320" alt="imgreceta"/>
-				<h3>Recetas</h3>
-			</div>
+			<h2>¿Sabes lo que es la contaminación cruzada?</h2>
 			
+			<p>
+				La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente
+			</p>
+			
+			<div>
+				<h3>Restaurantes</h3>
+				<h3>Recetas</h3>
+				<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="imgresto"/>
+				<img src="img/recetas saladas/ñoquis.png" width="320" height="320" alt="imgreceta"/>
+			</div>
 			
 	</article>
 		
 	</main>
 	
-	
-	
-	
-	
-	
-	
-	
-	
-	
 	<footer>
 		<div>
-			<img src="img/logo a inicio.png" width="81" height="43" alt=""/>
-			<p> © Tacc Free 2022 | Todos los derechos reservados</p>
+			<img class="imgfooter" src="img/logo a inicio.png" width="81" height="43" alt=""/>
+			<p class="footer"> © Tacc Free 2022 | Todos los derechos reservados</p>
 		</div>
 		<article>
 			<h4>SEGUINOS EN </h4>
@@ -84,17 +81,16 @@
 		</article>
 		<article class="infonuestra">
 			<h4>SOBRE NOSOTROS</h4>
-			<p>Preguntas frecuentes</p>
-			<p>Contacto</p>
+			<p class="footerpre">Preguntas frecuentes</p>
+			<p class="footercont">Contacto</p>
 		</article>
 		<article class="infolegal">
 			<h4>INFORMACIÓN</h4>
-			<p>Aviso legal</p>
-			<p>Política de privacidad</p>
-			<p>Política de cookies</p>
+			<p class="aviso">Aviso legal</p>
+			<p class="politica">Política de privacidad</p>
+			<p class="cookies">Política de cookies</p>
 		</article>
 		
-	
 	</footer>
 	
 	
