nuevos cambios en index

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
 		 <nav class="botoneraheader">
 			<ul>
 				<li><a href="#">Restaurantes</a></li>
-				<li><a href="#">Recetas</a></li>
+				<li><a href="#">Recetas</a>
+					<ul class="opciones">
+						<li><a href="#">Dulces</a></li>
+						<li><a href="#">Saladas</a></li>
+					</ul>
+				</li>
 				<li><a href="#">Foro</a></li>
 				<li><a href="#">Mi perfil</a></li>
 			 </ul>
@@ -36,17 +41,13 @@
 		<article class="columnader">
 			<h1>¿Qué podés encontrar?</h1>
 			<p>Variedad de recetas y restaurantes aptos para  celíacos, con la posibilidad de ajustar la búsqueda a  tus gustos. Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias. </p>
-			<nav class="registro">
-				<ul class="botonizq">
-					<li>Iniciar sesion</li>
-				</ul>
-				<ul class="botonderech">
-					<li>Registrarse</li>
-		 		</ul>
-			</nav>
+			<div class="botonera">
+				<a href="iniciar-sesion.html"><input class="botones" type="submit" value="Iniciar sesión"></a>
+				<a href="registrarse.html"><input class="botones" type="submit" value="Registrarse"></a>
+			</div>
 	
-		<h2>¿Sabes lo que es  la contaminación cruzada?</h2>
-		<p>La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente.</p>
+			<h2>¿Sabes lo que es  la contaminación cruzada?</h2>
+			<p>La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente.</p>
 			<div class="imginicio">
 		    	<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="imgresto"/>
 				<h3>Restaurantes</h3>
@@ -74,9 +75,9 @@
 		<article>
 			<h4>SEGUINOS EN </h4>
 			<div class="imgredes">
-	    		<img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/>
-	    		<img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/>
-	    		<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
+	    		<a href="https://outlook.live.com/mail/0/" target="_blank"><img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/></a>
+	    		<a href="https://es-la.facebook.com/" target="_blank"><img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/></a>
+	    		<a href="https://www.instagram.com/" target="_blank"><img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/></a>
 			</div>
 		</article>
 		<article class="infonuestra">
