--- a/registrarse.html
+++ b/registrarse.html
@@ -23,9 +23,8 @@
 			<input class="Controles" type="email" name="nombres" id="email" placeholder="Ingrese su Email">
 			<hr>
 			<h1>Contraseña</h1>
-			<input class="Controles" type="password" name="nombres" id="contraseña" placeholder="Ingrese su Contraseña">
+			<input class="Controles" type="password" name="nombres" id="contraseña" placeholder="Al menos 8 caracteres">
 			<hr>
-			<p>Al menos 8 caracteres</p>
 	  		<input class="Boton" type="submit" value="Registrarse">
 		</section>
 	</main>
