--- a/index.html
+++ b/index.html
@@ -41,34 +41,24 @@
 		<article class="columnader">
 			<h1>¿Qué podés encontrar?</h1>
 			<p>Variedad de recetas y restaurantes aptos para  celíacos, con la posibilidad de ajustar la búsqueda a  tus gustos. Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias. </p>
-			<div class="botonera">
-				<a href="iniciar-sesion.html"><input class="botones" type="submit" value="Iniciar sesión"></a>
-				<a href="registrarse.html"><input class="botones" type="submit" value="Registrarse"></a>
-			</div>
-	
-			<h2>¿Sabes lo que es  la contaminación cruzada?</h2>
-			<p>La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente.</p>
-			<div class="imginicio">
-		    	<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="imgresto"/>
-=======
 			
-			<p>
-				Variedad de recetas y restaurantes aptos para celíacos, con la posibilidad de ajustar la búsqueda a  tus gustos. Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias.
-			</p>
-			
-			<nav class="registro">
+				<nav class="registro">
 				<ul class="botonizq">
 					<li><a href="iniciar-sesion.html">Iniciar sesion</a></li>
 				</ul>
 				<ul class="botonderech">
 					<li><a href="registrarse.html">Registrarse</a></li>
 				</ul>
-			</nav>
+				</nav>
 	
-			<h2>¿Sabes lo que es la contaminación cruzada?</h2>
+			<h2>¿Sabes lo que es  la contaminación cruzada?</h2>
+			<p>La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente.</p>
 			
-			<p>
-				La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente
+			<div class="imginicio">
+		    	<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="imgresto"/>
+			</div>
+			
+			<p>Variedad de recetas y restaurantes aptos para celíacos, con la posibilidad de ajustar la búsqueda a  tus gustos. Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias.
 			</p>
 			
 			<div>
@@ -77,13 +67,17 @@
 				<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="imgresto"/>
 				<img src="img/recetas saladas/ñoquis.png" width="320" height="320" alt="imgreceta"/>
 			</div>	
+				
 	</main>
 	
 	<footer>
+		
 		<div>
 			<img class="imgfooter" src="img/logo a inicio.png" width="81" height="43" alt=""/>
 			<p class="footer"> © Tacc Free 2022 | Todos los derechos reservados</p>
 		</div>
+		
+		
 		<article>
 			<h4>SEGUINOS EN </h4>
 			<div class="imgredes">
@@ -92,16 +86,18 @@
 	    		<a href="https://www.instagram.com/" target="_blank"><img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/></a>
 			</div>
 		</article>
-		<article class="infonuestra">
+		
+		
+		<article>
 			<h4>SOBRE NOSOTROS</h4>
-			<p class="footerpre">Preguntas frecuentes</p>
-			<p class="footercont">Contacto</p>
+			<p>Preguntas frecuentes</p>
+			<p>Contacto</p>
 		</article>
-		<article class="infolegal">
+		<article>
 			<h4>INFORMACIÓN</h4>
-			<p class="aviso">Aviso legal</p>
-			<p class="politica">Política de privacidad</p>
-			<p class="cookies">Política de cookies</p>
+			<p>Aviso legal</p>
+			<p>Política de privacidad</p>
+			<p>Política de cookies</p>
 		</article>
 		
 	</footer>
