--- a/restaurantes.html
+++ b/restaurantes.html
@@ -20,6 +20,10 @@
 			<ul>
 				<li><a href="restaurantes.html">Restaurantes</a></li>
 				<li><a href="recetas.html">Recetas</a></li>
+					<ul class="opciones">
+						<li><a href="#">Dulces</a></li>
+						<li><a href="#">Saladas</a></li>
+					</ul>
 				<li><a href="foro.html">Foro</a></li>
 				<li><a href="#">Mi perfil</a></li>
 			 </ul>
@@ -82,12 +86,12 @@
 	    		<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
 			</div>
 		</article>
-		<article class="infonuestra">
+		<article>
 			<h4>SOBRE NOSOTROS</h4>
 			<p>Preguntas frecuentes</p>
 			<p>Contacto</p>
 		</article>
-		<article class="infolegal">
+		<article>
 			<h4>INFORMACIÓN</h4>
 			<p>Aviso legal</p>
 			<p>Política de privacidad</p>
