--- a/foro.html
+++ b/foro.html
@@ -3,8 +3,52 @@
 <head>
 <meta charset="utf-8">
 <title>Foro | TACC FREE</title>
+	<link href="estilos-foro.css" rel="stylesheet" type="text/css">
+	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css2?family=Inika&family=Open+Sans&family=Original+Surfer&display=swap" rel="stylesheet">
 </head>
 
 <body>
+	
+	<header>
+		
+		<div>
+			<a href="gracias por unirte.html"><img src="img/logo a inicio.png" alt="logo a inicio"/></a>
+		</div>
+		
+		 <nav class="botoneraheader">
+			<ul>
+				<li><a href="restaurantes.html">Restaurantes</a></li>
+				<li><a href="recetas.html">Recetas</a></li>
+				<li><a href="foro.html">Foro</a></li>
+				<li><a href="#">Mi perfil</a></li>
+			 </ul>
+		</nav>
+		
+	</header>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 </body>
 </html>
