cambie el titulo para probar

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>TACC FREE</title>
+<title>TACC FREE123</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Inika&family=Open+Sans&family=Original+Surfer&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 	<header>
 		
 		<div>
-			<a href="gracias por unirte.html"><img src="img/logo a inicio.png" alt="logo a inicio"/></a>
+			<a href="gracias por unirte.html"><img src="img/logo a inicio.png" width="61" height="35" alt="logoheader"/></a>
 		</div>
 		
 		 <nav class="botoneraheader">
@@ -32,6 +32,7 @@
 	</header>
 	
 	<main>
+		<section>
 		<article class="columnaizq">
 			<div>
 				<img class="logo" src="img/logo circulo blanco.png" alt="logo circulo blanco" width="350" height="350"/>
@@ -39,8 +40,9 @@
 		</article>
 		
 		<article class="columnader">
-			<h1>¿Qué podés encontrar?</h1>
-			<p>Variedad de recetas y restaurantes aptos para  celíacos, con la posibilidad de ajustar la búsqueda a  tus gustos. Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias. </p>
+			<div>
+				<h1>¿Qué podés encontrar?</h1>
+				<p>Variedad de recetas y restaurantes aptos para  celíacos, con la posibilidad de ajustar la búsqueda a  tus gustos. Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias. </p>
 			
 				<nav class="registro">
 				<ul class="botonizq">
@@ -50,23 +52,26 @@
 					<li><a href="registrarse.html">Registrarse</a></li>
 				</ul>
 				</nav>
+			</div>
 	
 			<h2>¿Sabes lo que es  la contaminación cruzada?</h2>
+			<article class="textoinicio">
 			<p>La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente.</p>
-			
-			<div class="imginicio">
-		    	<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="imgresto"/>
-			</div>
-			
-			<p>Variedad de recetas y restaurantes aptos para celíacos, con la posibilidad de ajustar la búsqueda a  tus gustos. Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias.
-			</p>
-			
-			<div>
-				<h3>Restaurantes</h3>
-				<h3>Recetas</h3>
+			</article>
+		</article>
+		</section>
+		
+			<div class="circulos">
+			<article class="contenedorresto">	
 				<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="imgresto"/>
+				<h3>Restaurantes</h3>
+			</article>
+			<div>
 				<img src="img/recetas saladas/ñoquis.png" width="320" height="320" alt="imgreceta"/>
+				<h3>Recetas</h3>
 			</div>	
+			</div>
+		
 				
 	</main>
 	
