--- a/recetas.html
+++ b/recetas.html
@@ -27,14 +27,79 @@
 	</header>
 	
 	<main>
+		<section class="datos">
+			<h1>Pizza</h1>
+			<ul>
+				<li><span class="bold">Tiempo</span>50 min</li>
+				<li><span class="bold">Dificultad</span>fácil</li>
+				<li><span class="bold">Porción</span>5 personas</li>
+			</ul>
+			<h2>¿De qué vamos a hacer la pizza hoy? </h2>
+			<p>¡Albahaca y provolone!
+
+				El queso de origen italiano le da un sabor saladito a la pizza junto a la frescura que suma la albahaca. FIESTA DE SABORES.
+
+				Ya sea que es una pizza para celíacos o la prepares porque no consumís tacc por elección, esta pizza sin harina de trigo es todos lo que está bien. ¡Manos a la masa!
+				La pizza casera debería ser considerada un tesoro de la humanidad, cada una de sus variantes se merece un lugar en el podio: la clásica, vegetariana, vegana y claro gluten free.</p>
+		</section>
+		<section class="receta">
+			<h2>Elaboración de la masa madre</h2>
+			<p>-En un bol mezclá la premezcla para panificados y la Maizena.
+
+				-Realizá un hueco en el centro y sumá la levadura junto al agua.
+
+				-Formá una masa y dejá reposar por 15 minutos cubierta con papel film.  Es una masa pegajosa, no te preocupes..
+			</p>
+			<h3>1</h3>
+			<h2>Horneado de la masa madre</h2>
+			<p>-Estirá la masa sobre una fuente para horno levemente aceitada. Podés ayudarte con las manos con un poquito de aceite para manipularla mejor.
+
+			-Dejá leudar por 15 minutos y cubrí con la salsa. 
+
+			-Cociná en horno bien caliente.</p>
+			<h3>2</h3>
+			<h2>Montaje final pizza</h2>
+			<p>-Retirá del horno y cubrí con el queso fresco, el tomate, la albahaca y el queso provolone.
+
+			-Llevá nuevamente al horno hasta que todo se gratine.
+
+			-Rociá con el aceite de oliva, orégano, ají molido y serví.</p>
+			<h3>3</h3>
+		</section>
+		
+		<section>
+			<h4>Ingredientes</h4>
+			<p>300 gramos de premezcla autorizada sin tacc
+			   80 gramos de Maizena
+			   150 a 180 cc de agua
+			   25 gramos de levadura fresca sin tacc
+			   ½ taza de salsa para pizza
+			   3 cucharadas de aceite de oliva
+			   2 tomates cortados en rodajas
+			   Albahaca fresca
+			   100 gramos de queso fresco
+			   150 gramos de queso provolone
+			   1 cucharada de orégano
+			   Ají molido</p>
+		</section>
+		<section>
+			<h4>Comentarios</h4>
+			<h5>Josefina</h5>
+			<p>Tremenda receta para compartir en familia.</p>
+			<h5>Martín</h5>
+			<p>Súper rica y muy fácil de hacer.</p>
+			<input class="boton" type="button" value="Ver foro">
+			<h4>Contanos que te pareció esta receta</h4>
+			<h5>Comentar</h5>
+		</section>
+		<section>
+			<h6>ANTERIOR</h6>
+			<p>Croquetas</p>
+			<h6>SIGUIENTE</h6>
+			<p>Tacos</p>
+		</section>
 	
-	
-	
-	
-	
-	
-	
-	
+
 	
 	</main>
 	
