--- a/restaurantes.html
+++ b/restaurantes.html
@@ -47,30 +47,32 @@
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.7072427834837!2d-58.43169238103839!3d-34.58627351072857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5860d9ab49b%3A0xb0e5ebd5982a548a!2sSintaxis%20Palermo!5e0!3m2!1ses-419!2sar!4v1654176665470!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 			</section>
 		</div>
-		<section class="columnaizq">
-			<article class="datos">
+		<div class="columnaizq">
+			<section class="datos">
 				<h3>Nicaragua 4849, C1414,CABA</h3>
 				<p>+54 11 2071-2960</p>
 				<p>www.sintaxisglutenfree.com</p>
-			</article>
+			</section>
 		
-			<article class="horario">
+			<section class="horario">
 				<h4>Horario de atención</h4>
 				<p>Martes a Sábados 10:00 a 23:30 hs</p>
 				<p>Domingos 10:00 a 20:00 hs</p>
-			</article>
+			</section>
 	
-			<article class="comentarios">
+			<section class="comentarios">
 				<h4>Comentarios</h4>
 				<h5>María</h5>
 				<p>Fui y me encanto, riquisima la comida</p>
 				<h5>Pablo</h5>
 				<p>Excelente atención, volvería mil veces más. Riquisimo todo</p>
-			</article>
-		</section>
+				<input class="boton" type="submit" value="Ver foro">
+				<h4>Contanos que te pareció este lugar</h4>
+			<h5>Comentar</h5>
+			</section>
+		</div>
+
 	</main>
-	
-	
 	
 	
 	<footer>
