unificacion de css y estilos

--- a/foro.html
+++ b/foro.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Foro | TACC FREE</title>
-	<link href="estilos-foro.css" rel="stylesheet" type="text/css">
+	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Inika&family=Open+Sans&family=Original+Surfer&display=swap" rel="stylesheet">
 </head>
@@ -13,16 +13,21 @@
 	<header>
 		
 		<div>
-			<a href="gracias por unirte.html"><img src="img/logo a inicio.png" alt="logo a inicio"/></a>
+			<a href="gracias por unirte.html"><img src="img/logo a inicio.png" width="61" height="35" alt="logoheader"/></a>
 		</div>
 		
 		 <nav class="botoneraheader">
 			<ul>
-				<li><a href="restaurantes.html">Restaurantes</a></li>
-				<li><a href="recetas.html">Recetas</a></li>
-				<li><a href="foro.html">Foro</a></li>
+				<li><a href="#">Restaurantes</a></li>
+				<li><a href="#">Recetas</a>
+					<ul class="opciones">
+						<li><a href="#">Dulces</a></li>
+						<li><a href="#">Saladas</a></li>
+					</ul>
+				</li>
+				<li><a href="#">Foro</a></li>
 				<li><a href="#">Mi perfil</a></li>
-			 </ul>
+			</ul>
 		</nav>
 		
 	</header>
@@ -86,9 +91,38 @@
 	
 	
 	
+	<footer>
+		<div>
+			<img src="img/logo a inicio.png" width="81" height="43" alt=""/>
+			<h5> © Tacc Free 2022 | Todos los derechos reservados</h5>
+		</div>
+		<article>
+			<h4>SEGUINOS EN </h4>
+			<div class="imgredes">
+	    		<img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/>
+	    		<img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/>
+	    		<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
+			</div>
+		</article>
+		<article>
+			<h4>SOBRE NOSOTROS</h4>
+			<h5>Preguntas frecuentes</h5>
+			<h5>Contacto</h5>
+		</article>
+		<article>
+			<h4>INFORMACIÓN</h4>
+			<h5>Aviso legal</h5>
+			<h5>Política de privacidad</h5>
+			<h5>Política de cookies</h5>
+		</article>
+		
 	
+	</footer>
 	
 	
 	
 </body>
+	
+	
+	
 </html>
