--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>TACC FREE123</title>
+<title>TACC FREE</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Inika&family=Open+Sans&family=Original+Surfer&display=swap" rel="stylesheet">
@@ -31,18 +31,16 @@
 		
 	</header>
 	
-	<main>
-		<section>
+	<main class="maininicio">
+		
+		<section class="sectionbienvenida">
 		<article class="columnaizq">
-			<div>
-				<img class="logo" src="img/logo circulo blanco.png" alt="logo circulo blanco" width="350" height="350"/>
-			</div>
 		</article>
 		
 		<article class="columnader">
 			<div>
 				<h1>¿Qué podés encontrar?</h1>
-				<p>Variedad de recetas y restaurantes aptos para  celíacos, con la posibilidad de ajustar la búsqueda a  tus gustos. Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias. </p>
+				<p class="textoquepodesencontrar">Variedad de recetas y restaurantes aptos para  celíacos, con la posibilidad de ajustar la búsqueda a  tus gustos. Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias. </p>
 			
 				<nav class="registro">
 				<ul class="botonizq">
@@ -53,16 +51,16 @@
 				</ul>
 				</nav>
 			</div>
-	
+			
+	<article>
 			<h2>¿Sabes lo que es  la contaminación cruzada?</h2>
-			<article class="textoinicio">
-			<p>La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente.</p>
+			<p class="textosabesloquees">La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente.</p>
 			</article>
 		</article>
 		</section>
 		
 			<div class="circulos">
-			<article class="contenedorresto">	
+			<article>	
 				<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="imgresto"/>
 				<h3>Restaurantes</h3>
 			</article>
@@ -76,35 +74,31 @@
 	</main>
 	
 	<footer>
-		
 		<div>
-			<img class="imgfooter" src="img/logo a inicio.png" width="81" height="43" alt=""/>
-			<p class="footer"> © Tacc Free 2022 | Todos los derechos reservados</p>
+			<img src="img/logo a inicio.png" width="81" height="43" alt=""/>
+			<h5> © Tacc Free 2022 | Todos los derechos reservados</h5>
 		</div>
-		
-		
 		<article>
 			<h4>SEGUINOS EN </h4>
 			<div class="imgredes">
-	    		<a href="https://outlook.live.com/mail/0/" target="_blank"><img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/></a>
-	    		<a href="https://es-la.facebook.com/" target="_blank"><img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/></a>
-	    		<a href="https://www.instagram.com/" target="_blank"><img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/></a>
+	    		<img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/>
+	    		<img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/>
+	    		<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
 			</div>
 		</article>
-		
-		
 		<article>
 			<h4>SOBRE NOSOTROS</h4>
-			<p>Preguntas frecuentes</p>
-			<p>Contacto</p>
+			<h5>Preguntas frecuentes</h5>
+			<h5>Contacto</h5>
 		</article>
 		<article>
 			<h4>INFORMACIÓN</h4>
-			<p>Aviso legal</p>
-			<p>Política de privacidad</p>
-			<p>Política de cookies</p>
+			<h5>Aviso legal</h5>
+			<h5>Política de privacidad</h5>
+			<h5>Política de cookies</h5>
 		</article>
 		
+	
 	</footer>
 	
 	
