--- a/gracias por unirte.html
+++ b/gracias por unirte.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>TACC FREE</title>
-	<link href="estilos-gracias-por-unirte.css" rel="stylesheet" type="text/css">
+	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Inika&family=Open+Sans&family=Original+Surfer&display=swap" rel="stylesheet">
 </head>
@@ -12,48 +12,58 @@
 	<header>
 		
 		<div>
-			<a href="gracias por unirte.html"><img src="img/logo a inicio.png" alt="logo a inicio"/></a>
+			<a href="gracias por unirte.html"><img src="img/logo a inicio.png" width="61" height="35" alt="logoheader"/></a>
 		</div>
 		
 		 <nav class="botoneraheader">
 			<ul>
-				<li><a href="restaurantes.html">Restaurantes</a></li>
-				<li><a href="recetas.html">Recetas</a></li>
-				<li><a href="foro.html">Foro</a></li>
+				<li><a href="#">Restaurantes</a></li>
+				<li><a href="#">Recetas</a>
+					<ul class="opciones">
+						<li><a href="#">Dulces</a></li>
+						<li><a href="#">Saladas</a></li>
+					</ul>
+				</li>
+				<li><a href="#">Foro</a></li>
 				<li><a href="#">Mi perfil</a></li>
-			 </ul>
+			</ul>
 		</nav>
 		
 	</header>
 	
-	<main>
-		<article class="columnaizq">	
-			<div>
-				<img src="img/logo circulo blanco.png" alt="logo circulo blanco" width="350" height="350"/>
-			</div>
+	
+	<main class="maininicio">
+		
+		<section class="sectionbienvenida">
+		<article class="columnaizq">
 		</article>
 		
 		<article class="columnader">
-			<h1>¡Gracias por unirte!</h1>
+			<div>
+				<h1>¡Gracias por unirte!</h1>
 			<p>Con nosotros vas a poder conocer variedad de recetas y restaurantes aptos para celiacos, con la posibilidad de ajustar la búsqueda a tus gustos! Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias. </p>
-
-	
-		<h2>¿Sabes lo que es la contaminación cruzada?</h2>
-			<p>La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente.</p>
 		
-			<div class="imginicio">
-		    	<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="imgresto"/>
-				<h3>Restaurantes</h3>
-				<img src="img/recetas saladas/ñoquis.png" width="320" height="320" alt="imgreceta"/>
-				<h3>Recetas</h3>
 			</div>
 			
-			
-	</article>
+	<article>
+			<h2>¿Sabes lo que es  la contaminación cruzada?</h2>
+			<p class="textosabesloquees">La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente.</p>
+			</article>
+		</article>
+		</section>
 		
+			<div class="circulos">
+			<article>	
+				<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="imgresto"/>
+				<h3>Restaurantes</h3>
+			</article>
+			<div>
+				<img src="img/recetas saladas/ñoquis.png" width="320" height="320" alt="imgreceta"/>
+				<h3>Recetas</h3>
+			</div>	
+			</div>
 		
-		
-		
+				
 	</main>
 	
 	
@@ -61,7 +71,7 @@
 	<footer>
 		<div>
 			<img src="img/logo a inicio.png" width="81" height="43" alt=""/>
-			<p> © Tacc Free 2022 | Todos los derechos reservados</p>
+			<h5> © Tacc Free 2022 | Todos los derechos reservados</h5>
 		</div>
 		<article>
 			<h4>SEGUINOS EN </h4>
@@ -71,16 +81,16 @@
 	    		<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
 			</div>
 		</article>
-		<article class="infonuestra">
+		<article>
 			<h4>SOBRE NOSOTROS</h4>
-			<p>Preguntas frecuentes</p>
-			<p>Contacto</p>
+			<h5>Preguntas frecuentes</h5>
+			<h5>Contacto</h5>
 		</article>
-		<article class="infolegal">
+		<article>
 			<h4>INFORMACIÓN</h4>
-			<p>Aviso legal</p>
-			<p>Política de privacidad</p>
-			<p>Política de cookies</p>
+			<h5>Aviso legal</h5>
+			<h5>Política de privacidad</h5>
+			<h5>Política de cookies</h5>
 		</article>
 		
 	
